# marigold-test

./: Cargo.toml  Makefile
kernel/todo-kernel/: Cargo.toml
kernel/todo-kernel/src/: blake2.rs  data.rs  dispatch.rs  kernel.rs  lib.rs  message.rs  signing.rs  utils.rs
kernel/todo-kernel/src/doc/: the-plan.qmd
kernel/todo-kernel/src/kernel/: read_input.rs
kernel/todo-kernel/src/message/: signed.rs
kernel/todo-kernel/tests/: playground.rs
