[package]
name = "todo-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
derive_more = {workspace = true}
serde = {workspace = true, features = ["derive"]}
serde-json-wasm = {workspace = true}
thiserror = {workspace = true}

tezos_crypto_rs = {workspace = true}

tezos-smart-rollup = {workspace = true}
tezos-smart-rollup-debug = {workspace = true}
tezos-smart-rollup-encoding = {workspace = true, features = ["tezos-encoding"]}

[dev-dependencies]
tezos_data_encoding = {workspace = true}
tezos-smart-rollup-mock = {workspace = true}
